--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Index"
+title: "Index!!!!"
 description: "1) Warnings 
 2) Parts List, Materials Included, Necessary Tools
 3) Spacing & Orientation Requirements for Layout
