--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -1,10 +1,6 @@
 ---
-title: "Index!!!!"
-description: "1) Warnings 
-2) Parts List, Materials Included, Necessary Tools
-3) Spacing & Orientation Requirements for Layout
-4) Mounting Instructions
-5) Startup Instructions
+title: "Indoor Unit Mounting"
+description: "This page goes over mounting of the indoor unit.
 "
 ---
 
