--- a/installation/odu_mount.mdx
+++ b/installation/odu_mount.mdx
@@ -2,6 +2,7 @@
 title: "Outdoor Unit Mounting"
 description: "This page goes over mounting of the outdoor unit.
 "
+icon: 'tree'
 ---
 
 ## Setting up New
