--- a/setup/first_power.mdx
+++ b/setup/first_power.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Code blocks"
-description: "Display inline code and code blocks"
-icon: "code"
+title: "First Power On"
+description: "First power on"
+icon: "bolt"
 ---
 
 ## Inline code
