--- a/installation/electrical.mdx
+++ b/installation/electrical.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Electrical Connections"
 description: "Start building awesome documentation in minutes"
+icon: 'bolt'
 ---
 
 ## Get started in three steps
