--- a/installation/hydronics.mdx
+++ b/installation/hydronics.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Priming Hydronics"
 description: "Start building awesome documentation in minutes"
+icon: 'water'
 ---
 
 ## Get started in three steps
