--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -2,9 +2,10 @@
 title: "Indoor Unit Mounting"
 description: "This page goes over mounting of the indoor unit.
 "
+icon: 'house'
 ---
 
-## Setting up New
+## Attaching Mounting Plate
 
 Get your documentation site up and running in minutes.
 
@@ -12,7 +13,7 @@ Get your documentation site up and running in minutes.
   Follow our three step quickstart guide.
 </Card>
 
-## Make it yours
+## Mount Indoor Unit
 
 Design a docs site that looks great and empowers your users.
 
@@ -34,7 +35,7 @@ Design a docs site that looks great and empowers your users.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Attach Front Panel
 
 Everything you need to create world-class documentation.
 
@@ -55,9 +56,3 @@ Everything you need to create world-class documentation.
     Write once and reuse across your docs.
   </Card>
 </Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
