--- a/specs/idu_specs.mdx
+++ b/specs/idu_specs.mdx
@@ -1,67 +1,106 @@
 ---
 title: "Technical Specs"
-description: "1) Warnings 
-2) Parts List, Materials Included, Necessary Tools
-3) Spacing & Orientation Requirements for Layout
-4) Mounting Instructions
-5) Startup Instructions
+description: "Technical specification sheet for the indoor unit.
 "
 ---
 
-## Setting up New
+## Cooling Mode Water Temperature
 
-Get your documentation site up and running in minutes.
+|                               | 40°F  | 45°F  | 55°F  |
+|-------------------------------|-------|-------|-------|
+| Cooling Capacity (BTU/hr)     | 11,000| 10,100| 9,300 |
+| Input Power (W)               | 55    |       |       |
+| Moisture Removal (Pts/hr)     | 1.9   | 1.7   | 1.4   |
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
+---
 
-## Make it yours
+## Heating Mode Water Temperature
 
-Design a docs site that looks great and empowers your users.
+|                               | 100°F | 110°F | 120°F |
+|-------------------------------|--------|--------|--------|
+| Heating Capacity (BTU/hr)     | 10,100 | 11,200 | 12,300 |
+| Input Power (W)               | 55     |        |        |
 
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
+---
 
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
+## Airflow
 
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
+| Type   | Crossflow            |
+|--------|----------------------|
+| CFM    | 190 - 310            |
+| Speeds | Low, Medium, High    |
+| Filter | MERV1 / MERV8 / MERV13 |
+| dB(A)  | 29 - 41              |
 
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+---
 
-## Create beautiful pages
+## Dimensions
 
-Everything you need to create world-class documentation.
+| Property | Value   |
+|----------|---------|
+| Height   | 300mm   |
+| Width    | 1000mm  |
+| Depth    | 150mm   |
 
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
+---
 
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
+## Controls
 
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
+| Feature   | Description                      |
+|-----------|----------------------------------|
+| WiFi      | 2.5 / 5GHz                       |
+| Bluetooth | Available with smartphone app    |
+| WiFi/IR   | Available with dial              |
 
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+---
 
-## Need inspiration?
+## Modes
 
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
+| Function     | Description                            |
+|--------------|----------------------------------------|
+| Operation    | Cool, Heat, Dehumidify, Fresh Air      |
+| Air Exchange | Auto                                   |
+| Timers       | Configurable on panel/app              |
+
+---
+
+## Condensate
+
+| Property | Value                |
+|----------|----------------------|
+| Size     | ¾″ Outer Diameter    |
+| Material | Rubber               |
+
+---
+
+## Electrical
+
+| Specification         | Value                      |
+|------------------------|----------------------------|
+| Volt Range             | 100–230V                   |
+| Hz/Phase               | 50/60Hz Single Phase       |
+| Power Supply           | LCDI Cord or Hardwire      |
+| Power Factor           | 0.96                       |
+| Input Power (standby)  | 10 W                       |
+| Input Power (off)      | 1.0 W                      |
+
+---
+
+## Motors
+
+| Component               | Value  |
+|-------------------------|--------|
+| Indoor Fan (x2) (W, max)| 60W    |
+| Indoor Fan Voltage      | 24V    |
+| Indoor F.L.A            | 2.5    |
+
+---
+
+## LCDI Power Cord
+
+| Property  | Value             |
+|-----------|-------------------|
+| Amps      | 15                |
+| Plug Type | Region Dependent  |
+
+
