thermostat mount contents

--- a/thermostat/thermostat_mount.mdx
+++ b/thermostat/thermostat_mount.mdx
@@ -1,21 +1,18 @@
 ---
 title: "Thermostat Mounting"
-description: "1) Warnings 
-2) Parts List, Materials Included, Necessary Tools
-3) Spacing & Orientation Requirements for Layout
-4) Mounting Instructions
-5) Startup Instructions
+description: "Installation guide for Airform Thermostat.
 "
 icon: 'clock'
 ---
 
-## Setting up New
+Note: The Airform Thermostat should be installed after the Indoor Unit(s) and Outdoor Unit(s) have been installed and tested for heating and cooling operation.
 
-Get your documentation site up and running in minutes.
+## Parts You Will Need
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
+- Screw Driver
+- Drill & Drill Bit
+- Level
+- Pencil
 
 ## Make it yours
 
