add overview page

--- a/thermostat/thermostat_mount.mdx
+++ b/thermostat/thermostat_mount.mdx
@@ -9,34 +9,18 @@ Note: The Airform Thermostat should be installed after the Indoor Unit(s) and Ou
 
 ## Parts You Will Need
 
+For wall mounting:
+
 - Screw Driver
 - Drill & Drill Bit
 - Level
 - Pencil
 
-## Make it yours
+## Placing the Thermostat
 
-Design a docs site that looks great and empowers your users.
+The Airform Thermostat can be installed with two options for mounting: 
 
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
 
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
-
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
 
 Everything you need to create world-class documentation.
 
