--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -4,6 +4,18 @@ description: "This page goes over mounting of the indoor unit. "
 icon: "house"
 ---
 
+<iframe
+  width="560"
+  height="315"
+  src="https://youtu.be/-4xwvxrmSIE?si=CtVkT9igdP7tT8qk"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+  style={{ width: '100%', borderRadius: '0.5rem' }}
+></iframe>
+
+
 ## Attaching Mounting Plate
 
 Get your documentation site up and running in minutes.
