update idu link video

--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -7,7 +7,7 @@ icon: "house"
 <iframe
   width="560"
   height="315"
-  src="https://youtu.be/-4xwvxrmSIE?si=CtVkT9igdP7tT8qk"
+  src="https://youtu.be/-4xwvxrmSIE"
   title="YouTube video player"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
