--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -4,8 +4,8 @@ description: "This page goes over mounting of the indoor unit. "
 icon: "house"
 ---
 
-<iframe width="1920" height="1080" 
-    src="https://www.youtube.com/embed/-4xwvxrmSIE?si=BaW7zOjWno2JPlvL&autoplay=1&mute=1"
+<iframe width="1120" height="630" 
+    src="https://www.youtube.com/embed/-4xwvxrmSIE?autoplay=1&mute=1&loop=1&playlist=-4xwvxrmSIE" 
     title="YouTube video player" 
     frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
