slight aspect ratio adjustment

--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -4,7 +4,7 @@ description: "This page goes over mounting of the indoor unit. "
 icon: "house"
 ---
 
-<iframe width="840" height="472.5" 
+<iframe width="812" height="456.75" 
     src="https://www.youtube.com/embed/-4xwvxrmSIE?autoplay=1&mute=1&loop=1&playlist=-4xwvxrmSIE" 
     title="YouTube video player" 
     frameborder="0" 
@@ -17,7 +17,7 @@ icon: "house"
 
 Get your documentation site up and running in minutes.
 
-## Mount Indoor Unit
+## Mount Tech Package
 
 Design a docs site that looks great and empowers your users.
 
