--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -4,16 +4,16 @@ description: "This page goes over mounting of the indoor unit. "
 icon: "house"
 ---
 
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000;">
-  <iframe 
-      src="https://www.youtube.com/embed/-4xwvxrmSIE?autoplay=1&mute=1&loop=1&playlist=-4xwvxrmSIE" 
-      title="YouTube video player" 
-      frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-      allowfullscreen
-      style="position: absolute; top:0; left:0; width:100%; height:100%;">
-  </iframe>
-</div>
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/-4xwvxrmSIE?autoplay=1&mute=1&loop=1&playlist=-4xwvxrmSIE"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+  style={{ width: '100%', borderRadius: '0.5rem' }}
+></iframe>
 
 ## Attaching Mounting Plate
 
