--- a/index.mdx
+++ b/index.mdx
@@ -1,72 +1,8 @@
 ---
-title: "Index"
-description: "For the Table of Contents: Overall Assembly then broken down into 3 sections: (indoor unit, outdoor unit, final connection)"
+title: "Airform Documentation"
+description: "Welcome to Airform Documentation.
+"
 ---
 
-## Warnings:
+## What You Will Find Here
 
-List of warnings and hazards with the installation process:
-
-"Installer should leave these instructions with appliance. Customer should read these instructions before using the appliance and should retain them for future reference."
-
-"WARNING: Read all safety instructions before using the product."
-
-"WARNING: If the information in this manual is not followed exactly, a fire or explosion may result causing property damage, personal injury or death"
-
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
-
-## Indoor Unit
-
-Design a docs site that looks great and empowers your users.
-
-Tools & materials page
-
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
-
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
-
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Links for other instructions
-
-Ikea hood: [ALLMÄNBILDAD](https://www.ikea.com/us/en/assembly_instructions/allmaenbildad-wall-mounted-range-hood-stainless-steel__AA-2180960-4-1.pdf)
-
-Ikea range: [Snesslinge](https://www.ikea.com/us/en/assembly_instructions/snesslinge-range-with-gas-cooktop-stainless-steel__AA-2498995-4-1.pdf)
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
