added buttons to welcome page

--- a/index.mdx
+++ b/index.mdx
@@ -6,3 +6,21 @@ description: "Welcome to Airform Documentation.
 
 ## What You Will Find Here
 
+<Columns cols={2}>
+  <Card title="Overview" href="/overview/product_overview">
+    Look over all the Airform products.
+  </Card>
+
+  <Card title="Installation" href="/installation/idu_mount">
+    Setting up the Airform Unit.
+  </Card>
+
+  <Card title="Thermostat" href="/thermostat/thermostat_mount">
+    Setting up the Airform Thermostat.
+  </Card>
+
+  <Card title="Setup" href="/setup/first_power">
+    First time powering on an Airform.
+  </Card>
+
+</Columns>
