add airform image on main page

--- a/index.mdx
+++ b/index.mdx
@@ -4,6 +4,11 @@ description: "Welcome to Airform Documentation.
 "
 ---
 
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/airform.png"
+/>
+
 ## What You Will Find Here
 
 <Columns cols={2}>
