main page update

--- a/index.mdx
+++ b/index.mdx
@@ -1,7 +1,6 @@
 ---
-title: "Airform Documentation"
-description: "Welcome to Airform Documentation.
-"
+title: "Welcome to Airform Documentation!"
+description: "Find guides for installation, power on, software setup, and maintenance on this site."
 ---
 
 <img
