--- a/index.mdx
+++ b/index.mdx
@@ -8,7 +8,7 @@ description: "Find guides for installation, power on, software setup, and mainte
   src="/images/airform.png"
 />
 
-## What You Will Find Here
+## Quickstart
 
 <Columns cols={2}>
   <Card title="Overview" href="/overview/product_overview">
