--- a/overview/product_overview.mdx
+++ b/overview/product_overview.mdx
@@ -1,8 +1,24 @@
 ---
-title: "Product Overview"
-description: "Product Overview.
+title: "Parts Overview"
+description: "All parts included in your Airform system.
 "
 ---
 
-## Hardware
+## Indoor Unit
+
+<Tip>
+Need to add indoor unit parts diagram here.
+</Tip>
+
+## Outdoor Unit
+
+<Tip>
+Need to add outdoor unit parts diagram here.
+</Tip>
+
+## Thermostat
+
+<Tip>
+Need to add thermostat parts diagram here.
+</Tip>
 
