--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Indoor Unit Mounting"
+title: "Airform Indoor Mounting"
 description: "This page goes over mounting of the indoor unit. "
 ---
 
