thermostat moutn instructions

--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Airform Indoor Mounting"
+title: "Indoor Unit Mounting"
 description: "This page goes over mounting of the indoor unit. "
 ---
 
@@ -21,7 +21,6 @@ Get your documentation site up and running in minutes.
 ## Mount Tech Package
 
 Design a docs site that looks great and empowers your users.
-
 
 ## Attach Front Panel
 
