--- a/installation/odu_mount_floor.mdx
+++ b/installation/odu_mount_floor.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Airform Outdoor Mounting (Floor)"
+title: "Outdoor Unit Mounting (Floor)"
 description: "This page goes over mounting of the floor-mounted outdoor unit.
 "
 ---
