--- a/installation/odu_mount_wall.mdx
+++ b/installation/odu_mount_wall.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Airform Outdoor Mounting (Wall)"
+title: "Outdoor Unit Mounting (Wall)"
 description: "This page goes over mounting of the wall-mounted outdoor unit.
 "
 ---
