--- a/thermostat/thermostat_mount.mdx
+++ b/thermostat/thermostat_mount.mdx
@@ -1,10 +1,12 @@
 ---
-title: "Thermostat Mounting"
+title: "Thermostat Wall Mounting"
 description: "Installation guide for Airform Thermostat.
 "
 ---
 
+<Tip>
 Note: The Airform Thermostat should be installed after the Indoor Unit(s) and Outdoor Unit(s) have been installed and tested for heating and cooling operation.
+</Tip>
 
 ## Parts You Will Need
 
@@ -15,34 +17,31 @@ For wall mounting:
 - Level
 - Pencil
 
-## Placing the Thermostat
+### Prepare The Wall Mounting Location
 
-The Airform Thermostat can be installed with two options for mounting: 
+- Before mounting the wall mount bracket, find a suitable location on the wall for the Thermostat.
+<Tip>
+Look for a location where the temperature is most representative of the ambient room temperature and has no hazards within the wall.
+</Tip>
+- Decide how you will mount the wall bracket to the wall:
+ - Install A: Screws with wall anchors (recommended)
+ - Install B: Adhesive (provided in-box. Adhesive should only be used
+for painted drywall, glass, and metal.)
+- Using a level, pencil a small horizontal line on the wall where you intend to place the Thermostat. We recommend mounting the Thermostat anywhere from 3 to 5 feet from the floor.
+<Tip>
+If installing near a light switch, center the Thermostat with the light switch, and place it about 1.5-2.5 inches away from the switch for a cohesive look.
+</Tip>
 
+Follow the instructions below on the following pages based on your chosen wall mounting:
 
+### Install A: Screw-Mount to Wall with Pre-Installed In-Wall Wiring
 
-Everything you need to create world-class documentation.
+- At the center of your horizontal pencil line, using a ½ in. drill bit, drill a hole into the hollow of the wall.
+- If you are not installing directly into a stud, line up the wall mount to the horizontal line, and mark the screw locations using the provided wall mount. Use a ⅛ in. drill bit to drill pilot holes at the marked locations. Now push the drywall anchors into the holes.
+- Using suitable in-wall wiring, fish the power wire from your intended power source location and through the ½ in. hole you drilled. Fasten the wires with tape to prevent them from falling back into the wall.
+- Pull the wires through the large center hole in the Thermostat wall mount, so that the flat side of the wall mount is positioned against the wall.
+- Use the horizontal line indicators on the wall mount to align it to your horizontal pencil line; mark the locations of the screw holes on your wall. Ensure that the Airform logo is right side up.
 
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
+### Install B: Adhesive Mount with Inbox Power Cable
 
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
+- Step 1 here
