small header sizing corrections

--- a/installation/hydronics.mdx
+++ b/installation/hydronics.mdx
@@ -3,16 +3,16 @@ title: "Priming Hydronics"
 description: "Charging your hydronic system"
 ---
 
-## Parts and Tools Required
+### Parts and Tools Required
 
-## Step 1: Set Airform to Charging Mode
+### Step 1: Set Airform to Charging Mode
 
-## Step 2: Attach Charging Manifold 
+### Step 2: Attach Charging Manifold 
 
-## Step 3: Charge System
+### Step 3: Charge System
 
-## Step 4: Adding Glycol
+### Step 4: Adding Glycol
 
-## Step 5: Air Bubble Purge
+### Step 5: Air Bubble Purge
 
-## Step 6: Seal System
+### Step 6: Seal System
