--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -14,14 +14,14 @@ description: "This page goes over mounting of the indoor unit. "
   style={{ width: '100%', borderRadius: '0.5rem' }}
 ></iframe>
 
-## Attaching Mounting Plate
+## Step 1: Attaching Mounting Plate
 
 Get your documentation site up and running in minutes.
 
-## Mount Tech Package
+## Step 2: Mount Tech Package
 
 Design a docs site that looks great and empowers your users.
 
-## Attach Front Panel
+## Step 3: Attach Front Panel
 
 Everything you need to create world-class documentation.
