--- a/installation/odu_mount_floor.mdx
+++ b/installation/odu_mount_floor.mdx
@@ -4,18 +4,18 @@ description: "This page goes over mounting of the floor-mounted outdoor unit.
 "
 ---
 
-## Secure Floor Foundation
+### Step 1: Secure Floor Foundation
 
 text here
 
-## Attach Enclosure to Foundation
+### Step 2: Attach Enclosure to Foundation
 
 text here
 
-## Attach Tech Package to Enclosure
+### Step 3: Attach Tech Package to Enclosure
 
 text here
 
-## Attach Front Panel to Enclosure
+### Step 4: Attach Front Panel to Enclosure
 
 text here
