--- a/installation/odu_mount_wall.mdx
+++ b/installation/odu_mount_wall.mdx
@@ -4,14 +4,14 @@ description: "This page goes over mounting of the wall-mounted outdoor unit.
 "
 ---
 
-## Attach Wall Mounting Plate
+### Step 1: Attach Wall Mounting Plate
 
 text here
 
-## Mount Tech Package
+### Step 2: Mount Tech Package
 
 text here
 
-## Attach Enclosure
+### Step 3: Attach Enclosure
 
 text here
