--- a/thermostat/thermostat_power.mdx
+++ b/thermostat/thermostat_power.mdx
@@ -1,67 +1,47 @@
 ---
 title: "Thermostat Power On"
-description: "1) Warnings 
-2) Parts List, Materials Included, Necessary Tools
-3) Spacing & Orientation Requirements for Layout
-4) Mounting Instructions
-5) Startup Instructions
+description: "Powering on the Thermostat for the first time.
 "
 ---
 
-## Setting up New
+<Tip>
+Note: The Airform Thermostat should be installed after the Indoor Unit(s) and Outdoor Unit(s) have been installed and tested for heating and cooling operation.
+</Tip>
 
-Get your documentation site up and running in minutes.
+## Parts You Will Need
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
+For wall mounting:
 
-## Make it yours
+- Screw Driver
+- Drill & Drill Bit
+- Level
+- Pencil
 
-Design a docs site that looks great and empowers your users.
+### Prepare The Wall Mounting Location
 
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
+- Before mounting the wall mount bracket, find a suitable location on the wall for the Thermostat.
+<Tip>
+Look for a location where the temperature is most representative of the ambient room temperature and has no hazards within the wall.
+</Tip>
+- Decide how you will mount the wall bracket to the wall:
+ - Install A: Screws with wall anchors (recommended)
+ - Install B: Adhesive (provided in-box. Adhesive should only be used
+for painted drywall, glass, and metal.)
+- Using a level, pencil a small horizontal line on the wall where you intend to place the Thermostat. We recommend mounting the Thermostat anywhere from 3 to 5 feet from the floor.
+<Tip>
+If installing near a light switch, center the Thermostat with the light switch, and place it about 1.5-2.5 inches away from the switch for a cohesive look.
+</Tip>
 
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
+Follow the instructions below on the following pages based on your chosen wall mounting:
 
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
+### Install A: Screw-Mount to Wall with Pre-Installed In-Wall Wiring
 
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+- At the center of your horizontal pencil line, using a ½ in. drill bit, drill a hole into the hollow of the wall.
+- If you are not installing directly into a stud, line up the wall mount to the horizontal line, and mark the screw locations using the provided wall mount. Use a ⅛ in. drill bit to drill pilot holes at the marked locations. Now push the drywall anchors into the holes.
+- Using suitable in-wall wiring, fish the power wire from your intended power source location and through the ½ in. hole you drilled. Fasten the wires with tape to prevent them from falling back into the wall.
+- Pull the wires through the large center hole in the Thermostat wall mount, so that the flat side of the wall mount is positioned against the wall.
+- Use the horizontal line indicators on the wall mount to align it to your horizontal pencil line; mark the locations of the screw holes on your wall. Ensure that the Airform logo is right side up.
 
-## Create beautiful pages
+### Install B: Adhesive Mount with Inbox Power Cable
 
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
+- Step 1 here
