--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Welcome to Airform Documentation!"
-description: "Find guides for installation, power on, software setup, and maintenance on this site."
+description: "Find guides for installation, power on, software setup, and maintenance instructions."
 ---
 
 <img
