some updates on electrical

--- a/installation/electrical.mdx
+++ b/installation/electrical.mdx
@@ -5,5 +5,8 @@ description: "All electrical installation requirements for Airform."
 
 <Warning>All electrical installations must comply with the latest edition of NEC (ANSI/NFPA 70) and all local codes and ordinances.</Warning>
 
-## System Wiring Diagram
+### System Wiring Diagram
 
+### Powering on the Outdoor Unit
+
+### Power on the Indoor Unit
