added filler images to system overview page

--- a/help/faq.mdx
+++ b/help/faq.mdx
@@ -1,7 +1,6 @@
 ---
 title: 'Frequenty Asked Questions'
-description: 'Frequently asked questions about Airform.'
 ---
 
-***What time is it?***.
+***What time is it?***
 - 9 am.
