--- a/overview/system_overview.mdx
+++ b/overview/system_overview.mdx
@@ -13,19 +13,26 @@ description: "An overview of how the system works.
 
 ## Indoor Unit
 
-<Tip>
-Need to add outdoor unit parts diagram here.
-</Tip>
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/indoor_overview.png"
+/>
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/indoor_overview_2.png"
+/>
 
 ## Outdoor Unit
 
-<Tip>
-Need to add outdoor unit parts diagram here.
-</Tip>
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/outdoor_overview.png"
+/>
 
 ## Thermostat
 
-<Tip>
-Need to add thermostat parts diagram here.
-</Tip>
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/thermostat_overview.png"
+/>
 
