added filler images to parts description

--- a/overview/product_overview.mdx
+++ b/overview/product_overview.mdx
@@ -6,19 +6,29 @@ description: "All parts included in your Airform system.
 
 ## Indoor Unit
 
-<Tip>
-Need to add indoor unit parts diagram here.
-</Tip>
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/indoor_parts.png"
+/>
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/indoor_parts_2.png"
+/>
 
 ## Outdoor Unit
 
-<Tip>
-Need to add outdoor unit parts diagram here.
-</Tip>
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/outdoor_parts.png"
+/>
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/outdoor_parts_2.png"
+/>
 
 ## Thermostat
 
-<Tip>
-Need to add thermostat parts diagram here.
-</Tip>
-
+<img
+  style={{ borderRadius: '0.5rem' }}
+  src="/images/thermostat_parts.png"
+/>
