--- a/setup/connect_phone.mdx
+++ b/setup/connect_phone.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Connect App'
-description: 'Connect to mobile app'
+title: 'Running your Airform'
+description: 'Running your Airform'
 ---
 
-### Connecting to Mobile App
+### Running your Airform
