update youtube videog

--- a/installation/idu_mount.mdx
+++ b/installation/idu_mount.mdx
@@ -6,7 +6,7 @@ description: "This page goes over mounting of the indoor unit. "
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/-4xwvxrmSIE?autoplay=1&mute=1&loop=1&playlist=-4xwvxrmSIE"
+  src="https://www.youtube.com/embed/ojk_HCfq-wA?si=HMUk_MhSc1CO9yle"
   title="YouTube video player"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
