--- a/installation/odu_mount_floor.mdx
+++ b/installation/odu_mount_floor.mdx
@@ -4,6 +4,17 @@ description: "This page goes over mounting of the floor-mounted outdoor unit.
 "
 ---
 
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/irncYVKtuc0?si=FC9G_xue10BbemLM" 
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+  style={{ width: '100%', borderRadius: '0.5rem' }}
+></iframe>
+
 ### Step 1: Secure Floor Foundation
 
 text here
