--- a/installation/odu_mount_floor.mdx
+++ b/installation/odu_mount_floor.mdx
@@ -7,7 +7,7 @@ description: "This page goes over mounting of the floor-mounted outdoor unit.
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/irncYVKtuc0?si=FC9G_xue10BbemLM" 
+  src="https://www.youtube.com/embed/irncYVKtuc0?autoplay=1&mute=1&loop=1&playlist=irncYVKtuc0"
   title="YouTube video player"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
